--- a/02.정적페이지크롤링/02.1단계.ipynb
+++ b/02.정적페이지크롤링/02.1단계.ipynb
@@ -14,7 +14,7 @@
     "category=soup.select_one(\".product-category\")\n",
     "name=soup.select_one(\".product-name\").text\n",
     "link=soup.select_one(\".product-name>a\").attrs['href']\n",
-    "price=soup.select_one(\".product-price\").text.strip().replace(',' , \"\").replace('원', '')"
+    "price=soup.select_one(\".product-price\").text.strip().replace(',' , \"\").replace('원', '.')"
    ]
   },
   {
